--- a/src/scss/inc/_layout.scss
+++ b/src/scss/inc/_layout.scss
@@ -36,16 +36,12 @@ $gameWidth: 1280;
         align-items: center;
         height: 100%;
         padding: 0 6px;
+        top: 2px
     }
 }
 
 [data-sba-submenu="true"] {
     overflow-y: hidden;
-    .sba {
-        position: relative;
-        left: -167px;
-        top: -175px;
-    }
     .pz-mobile-dropdown {
         &.show {
             .pz-dropdown__list {
@@ -66,11 +62,6 @@ $gameWidth: 1280;
             right: -16px;
             top: 45px;
         }
-    }
-
-    .sba {
-        left: -167px;
-        top: 0px;
     }
 
     &.pz-desktop {
@@ -104,14 +95,6 @@ $gameWidth: 1280;
 
     [data-ui="header"] {
         display: none;
-    }
-
-    &[data-sba-submenu="true"] {
-        .sba-container {
-            top: 0;
-            height: 0;
-            z-index: 4;
-        }
     }
 
     .sb-expanded {
@@ -306,12 +289,6 @@ $gameWidth: 1280;
             }
         }
 
-        &[data-sba-submenu="true"] {
-            .sba {
-                top: -66px;
-            }
-        }
-
         &.pz-desktop {
             .sba {
                 left: -191px;
@@ -320,15 +297,6 @@ $gameWidth: 1280;
     }
 }
 
-@media (min-width: 1298px) {
-    [data-sba-active="true"] {
-        &[data-sba-submenu="true"] {
-            .sba {
-                left: -179px;
-            }
-        }
-    }
-}
 
 // result list on the right
 @media (min-width: 768px) {
